poc/deployment/auto/crate.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: crate
  name: crate
spec:
  ports:
  # Inter-node communication.
  - port: 4300
    name: crate-internal
  # HTTP clients.
  - port: 4200
    name: crate-web
    # Make Web UI available at port 4200 from outside the cluster.
    nodePort: 4200
  # PostgreSQL wire protocol clients.
  - port: 5432
    name: postgres
  selector:
    app: crate
  type: NodePort

---
kind: StatefulSet
apiVersion: "apps/v1"
metadata:
  # This is the name used as a prefix for all pods in the set.
  name: crate
spec:
  serviceName: "crate-set"
  # Our cluster has three nodes.
  replicas: 1
  selector:
    matchLabels:
      # The pods in this cluster have the `app:crate` app label.
      app: crate
  template:
    metadata:
      labels:
        app: crate
    spec:
      # InitContainers run before the main containers of a pod are
      # started, and they must terminate before the primary containers
      # are initialized. Here, we use one to set the correct memory
      # map limit.
      containers:
      - name: crate
        image: crate:4.1.4
        # Pass in configuration to CrateDB via command-line options.
        # We are setting the name of the node's explicitly, which is
        # needed to determine the initial master nodes. These are set to
        # the name of the pod.
        # We are using the SRV records provided by Kubernetes to discover
        # nodes within the cluster.
        args:
          - -Cnode.name=${POD_NAME}
          - -Ccluster.name=${CLUSTER_NAME}
          - -Ccluster.initial_master_nodes=crate-0
          - -Cdiscovery.seed_providers=srv
          - -Cdiscovery.srv.query=_crate-internal._tcp.crate.${NAMESPACE}.svc.cluster.local
          - -Cgateway.recover_after_nodes=1
          - -Cgateway.expected_nodes=${EXPECTED_NODES}
          - -Cpath.data=/data
        resources:
          limits:
            # How much memory each pod gets.
            memory: 512Mi
        ports:
          # Port 4300 for inter-node communication.
        - containerPort: 4300
          name: crate-internal
          # Port 4200 for HTTP clients.
        - containerPort: 4200
          name: crate-web
          # Port 5432 for PostgreSQL wire protocol clients.
        - containerPort: 5432
          name: postgres
        # Environment variables passed through to the container.
