poc/deployment/auto/orion.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: orion
  name: orion
spec:
  ports:
  - name: http
    port: 1026
    protocol: TCP
    targetPort: 1026
  selector:
    app: orion

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: orion
  name: orion
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orion
  template:
    metadata:
      labels:
        app: orion
    spec:
      containers:
      - command:
        - bash
        - "-c"
        - "sleep 10; exec /usr/bin/contextBroker -fg -multiservice -ngsiv1Autocast -dbhost mongodb -logLevel DEBUG"
        image: "fiware/orion:2.2.0"
        imagePullPolicy: IfNotPresent
        name: orion
        ports:
        - containerPort: 1026
          name: http
