poc/deployment/auto/quantumleap.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: quantumleap
  name: quantumleap
spec:
  ports:
  - name: http
    port: 8668
    protocol: TCP
    targetPort: 8668
  selector:
    app: quantumleap

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: quantumleap
  name: quantumleap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quantumleap
  template:
    metadata:
      labels:
        app: quantumleap
    spec:
      containers:
        - image: "orchestracities/quantumleap:0.8.0"
          imagePullPolicy: IfNotPresent
          name: quantumleap
          ports:
          - containerPort: 8668
            name: http
