poc/deployment/auto/ulagent.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ulagent
  name: ulagent
spec:
  ports:
  - name: iota-north
    port: 4041
    protocol: TCP
    targetPort: 4041
  - name: iota-south
    port: 7896
    protocol: TCP
    targetPort: 7896
  selector:
    app: ulagent

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ulagent
  name: ulagent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ulagent
  template:
    metadata:
      labels:
        app: ulagent
    spec:
      containers:
        - image: "fiware/iotagent-ul:1.16.0-distroless"
          imagePullPolicy: IfNotPresent
          name: ulagent
          ports:
          - containerPort: 4041
            name: iota-north
          - containerPort: 7896
            name: iota-south
